Fixed inline maths and spacing.

--- a/css/common.scss
+++ b/css/common.scss
@@ -95,6 +95,7 @@ ul {
   ol {
     margin-top: .25rem;
     margin-bottom: .5rem;
+    padding-left: 5ch;
   }
 }
 
@@ -110,6 +111,7 @@ ol {
   ol {
     margin-top: .25rem;
     margin-bottom: .5rem;
+    padding-left: 5ch;
   }
 }
 
